# python-project-template

./: .coveragerc  .dir-locals.el  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  environment.yml  init.py  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: buildwheel.yml  ci-test.yml  deploy.yml  doc.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
doc/: conf.py  index.md
doc/content/: api.md  installation.md  quickstart.md
doc/content/encodings/: index.md  instance.md
docs/: SUMMARY.md  getting_started.md  index.md  installation.md  usage.md
docs/_custom/css/: extra.css
docs/community/: CHANGES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  help.md  index.md
docs/examples/: index.md
docs/reference/: index.md
docs/reference/api/: index.md
docs/reference/cli/: index.md
docs/reference/encodings/: index.md
docs/reference/problem/: index.md
docs/use/: help.md  installation.md  quick-start.md
fillname/: __init__.py
fillname/utils/: parser.py
src/fillname/: __init__.py  __main__.py  app.py
src/fillname/utils/: logger.py  logging.py  parser.py
tests/: __init__.py  test.py  test_main.py
