[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fillname"
authors = [{ name = "Author Fillname", email = "author@fillname.org" }]
description = "A template project."
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/potassco/fillname.git/"
Documentation = "https://docs.potassco.org/fillname/"
Repository = "https://github.com/potassco/fillname"
Issues = "https://github.com/potassco/fillname/issues"
Changelog = "https://github.com/potassco/fillname/blob/master/CHANGES.md"

[project.optional-dependencies]
lint = ["ruff"]
typecheck = ["pytest", "ty"]
test = ["pytest", "pytest-cov", "coverage[toml]"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0",
    "clindocs>=1.5.1",
    "mkdocs-literate-nav",
    "pygments_clingo",
]
dev = ["fillname[test,typecheck,lint]"]

[project.scripts]
fillname = "fillname.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "/usr/**",
    "**/site-packages/**",
    "**/node_modules/**",
    "**/typeshed-fallback/**",
]

[tool.ruff.lint]
extend-select = ["I", "E", "F", "B", "C4", "D", "ARG", "SIM", "ANN", "Q"]
ignore = [
    "E741",
    "D200",
    "D203",
    "D212",
    "D413",
    "B023", # broken lint
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["fillname", "tests"]
omit = ["*/fillname/__main__.py", "*/fillname/utils/logging.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "raise NotImplementedError",
    "raise TypeError",
    "nocoverage",
    "assert",
    "\\.\\.\\.",
]
