[metadata]
name = fillname
version = 1.0.0
author = Susana Hahn
author_email = hahnmartinlu@uni-potsdam.de
description = FILL-DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/fillname

[options]
packages = fillname
install_requires =
    clingo>=5.6.0

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2

[options.entry_points]
console_scripts =
    fillname = fillname:main
