[metadata]
name = fillname
version = 1.0.0
author = <author>
author_email = <author-email>
description = A template project.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://potassco.org/

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    setuptools

[options.extras_require]
format =
    black
    isort
    autoflake
lint_flake8 =
    flake8
    flake8-black
    flake8-isort
lint_pylint =
    pylint
typecheck =
    types-setuptools
    mypy
test =
    coverage
doc =
    sphinx
    sphinx_rtd_theme
    nbsphinx
dev =
    fillname[test,typecheck,lint_pylint,lint_flake8]

[options.entry_points]
console_scripts =
    fillname = fillname:main
