[metadata]
name = fillname
version = 1.0.0
author = <author>
author_email = <author-email>
description = A template project.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://potassco.org/

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
format =
    black
    isort
    autoflake
lint_pylint =
    pylint
typecheck =
    types-setuptools
    mypy
test =
    coverage[toml]
doc =
    sphinx
    furo
    nbsphinx
    sphinx_copybutton
    myst-parser
dev =
    fillname[format,lint_pylint,typecheck,test]

[options.entry_points]
console_scripts =
    fillname = fillname.__main__:main
